# GeRotMini

./: .gitignore  README.md
API/ActnSens/: CMakeLists.txt
API/ActnSens/include/SVnPUMPnIMU/: api.h
API/ActnSens/include/dynamixel/: dynamixel.h
API/ActnSens/src/: test.cpp
API/ActnSens/src/SVnPUMPnIMU/: api.cpp
API/INA219/: MesureurSimple  MesureurSimple.cpp  Oscillo  PilotageMoteur
API/SVnPUMPnIMU/: CMakeLists.txt
API/SVnPUMPnIMU/include/: api.h
API/SVnPUMPnIMU/src/: api.cpp  readIMU_example.c  setSV_example.cpp
API/dynamixel/src/: test.cpp
software/: CMakeLists.txt
software/include/: adm_parameter.csv  data_Force.csv  initPos.csv  output.csv
software/include/MotionControl/: MotionControl.hpp  controlhelper.h  gebot.h  head.h  leg.h  robotcontrol.h
software/include/SVnPUMPnIMU/: api.h
software/src/: main.cpp  test.cpp
software/src/MotionControl/: MotionControl.cpp  controlhelper.cpp  gebot.cpp  leg.cpp  robotcontrol.cpp
software/src/SVnPUMPnIMU/: api.cpp
software/src/dynamixel/: dynamixel.cpp
